fix-top baner issue and add horizontal scroll to table in mobile

--- a/public/stylesheets/office.css
+++ b/public/stylesheets/office.css
@@ -265,7 +265,7 @@
     margin-left: 4em;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 500px) {
     .c-button--arrow-left {
         margin-left: 20px !important;
         margin-top: 25px !important;
@@ -279,6 +279,11 @@
     .mobileLblRes {
         display: block !important;
         margin-bottom: 10px !important;
+    }
+    #tblCalendar, #available {
+        display: block !important;
+        overflow-x: auto !important;
+        white-space: nowrap !important;
     }
 }
 
